# fitbit-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: docker-publish.yml
src/fitbit_mcp/: __main__.py  app.py  client.py  oauth_provider.py  server.py
src/fitbit_mcp/tools/: __init__.py  activity.py  activity_timeseries.py  azm.py  body.py  breathing_rate.py  cardio_score.py  devices.py  friends.py  heart_rate.py  hrv.py  intraday.py  nutrition.py  sleep.py  spo2.py  temperature.py  user.py
